--- a/contact.html
+++ b/contact.html
@@ -71,11 +71,12 @@
     </div>
     <div id="about" class="row">
       
-      <div id="about" class="col-lg-12">
-                <p>*** Reach out to me at <b>(801)979-4813</b> or via email at: <a href= "mailto: fiuzaisaac@hotmail.com"> fiuzaisaac@hotmail.com </a><br>
+      <div id="about" class="col-lg-9">
+                 <p>*** Reach out to me at <b>(801)979-4813</b> or via email at: <a href= "mailto: fiuzaisaac@hotmail.com"> fiuzaisaac@hotmail.com </a><br>
                   if you have any questions/suggestions/help building your own website/etc ***
                  </p> 
       </div>
+    </div>
     <div class="row">
       <div class="col-lg-12">
         <div class="card">
@@ -90,6 +91,7 @@
     </div>
   </div>
   </div>
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
