--- a/contact.html
+++ b/contact.html
@@ -70,12 +70,13 @@
       </div>
     </div>
 
-
-       <p align="center">fiuzaisaac@gmail</p>
+        <br>
+       <h1 align="center" style="color:white">fiuzaisaac@gmail</h1>
         <br>
         <p align="center"><b>or</b></p>
         <br>
-        <p align="center">+1(801)-979-4813</p>
+        <h1> align="center" style="color:white">+1(801)-979-4813</h1>
+    <br>
                   
    
     <div class="row">
