--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,12 @@
         <br>
        <h1 align="center" style="color:white">fiuzaisaac@gmail</h1>
         <br>
-        <h2 align="center"><b>or</b></h2>
+        <h2 align="center" style="color:white"><b>/</b></h2>
         <br>
         <h1 align="center" style="color:white">+1(801)-979-4813</h1>
+    <br>
+    <br>
+    <br>
     <br>
                   
    
