--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
         <br>
         <br>
         <br>
-       <h1 align="center" style="color:white">fiuzaisaac@gmail</h1>
+       <h1 align="center" style="color:white">fiuzaisaac@gmail.com</h1>
         <br>
         <h2 align="center" style="color:white"><b>/</b></h2>
         <br>
