--- a/contact.html
+++ b/contact.html
@@ -74,11 +74,11 @@
         <br>
         <br>
         <br>
-       <h2 align="center" style="color:white" a href="mailto:fiuzaisaac@gmail.com">fiuzaisaac@gmail.com</a></h2>
+       <h2 align="center" style="color:white"> <a href="mailto:fiuzaisaac@gmail.com">fiuzaisaac@gmail.com</a></h2>
         <br>
         <h2 align="center" style="color:white"><b>/</b></h2>
         <br>
-        <h2 align="center" style="color:white" a href="tel:+18019794813">1(801)9794813</a></h2>
+        <h2 align="center" style="color:white"> <a href="tel:+18019794813">1(801)9794813</a></h2>
     <br>
     <br>
     <br>
