--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         <br>
         <h2 align="center" style="color:white"><b>/</b></h2>
         <br>
-        <h2 align="center" style="color:white"> <a href="tel:+18019794813">1(801)9794813</a></h2>
+        <h2 align="center" style="color:white"> <a href="tel:+18019794813">1(801)979-4813</a></h2>
     <br>
     <br>
     <br>
