--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         <br>
        <h2 align="center" style="color:white"> <a href="mailto:fiuzaisaac@gmail.com">fiuzaisaac@gmail.com</a></h2>
         <br>
-        <h2 align="center" style="color:white"><b>/</b></h2>
+        <h2 align="center" style="color:white"><a href=""><b>/</b></a></h2>
         <br>
         <h2 align="center" style="color:white"> <a href="tel:+18019794813">1(801)979-4813</a></h2>
     <br>
