--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact me</a>
+          a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analytics Projects</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="finalresume.pdf">My Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact me</a>
         </li>
 
       </ul>
@@ -99,20 +105,7 @@
         <br>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="card">
-          <div class="card-body">
-            <a class="nav-link" href="https://github.com/ifiuza?tab=repositories">My GitHub Projects</a>
-            <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
-            <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
-            <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analytics Projects</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
