--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analytics Projects</a>
+          <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analytics Projects</a>
         </li>
         <li class="nav-item">
         <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
