--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,8 @@
         <br>
        <h2 align="center" style="color:white"> <a href="mailto:fiuzaisaac@gmail.com">fiuzaisaac@gmail.com</a></h2>
         <br>
-        <h2 align="center" style="color:white"><a href=""><b>/</b></a></h2>
         <br>
-        <h2 align="center" style="color:white"> <a href="tel:+18019794813">1(801)979-4813</a></h2>
+        <h2 align="center" style="color:white"> <a href="tel:+18019794813">(801)979-4813</a></h2>
     <br>
     <br>
     <br>
@@ -88,18 +87,7 @@
     <br>
     <br>
    
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="card">
-          <div class="card-body">
-            <a class="nav-link" href="https://github.com/ifiuza?tab=repositories">My GitHub Projects</a>
-            <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
-            <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
-            <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analyst Projects</a>
-          </div>
-        </div>
-      </div>
-    </div>
+  
   </div>
   </div>
 
