--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,20 @@
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact me</a>
+          <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analytics Projects</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="finalresume.pdf">My Resume</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact me</a>
+        </li>
 
       </ul>
-      
+  
     </div>
   </nav>
 
