--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div id="about">
           <h2>About Me /Skills</h2>
-          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store Owner </b>
+          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store Owner </b></p>
           
           <br>
             <p><b>Latest Projects:</b></p>
