--- a/portfolio.html
+++ b/portfolio.html
@@ -83,6 +83,10 @@
                         And my <a href="https://sites.google.com/view/icf-isaac-c-fiuza/home"> Data Analyst Projects </a></p> 
               
 
+                        <a href="https://ifiuza-leadstrackerapp.netlify.app/" target="_blank">
+                          <b> A Leads Tracker App. (JavaScript + firebase)</Script></b> </a>
+                      <a href="https://github.com/ifiuza/leadstrackerapp"> - See Code on GitHub</a>
+
                       <a href="https://bespoke-griffin-fd3aa4.netlify.app/" target="_blank">
                           <b> A BlackJack Game. (JavaScript)</Script></b> </a>
                       <a href="https://github.com/ifiuza/Blackjack"> - See Code on GitHub</a>
