adding space br

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             <p><b>Latest Projects:</b></p>
 
             <a href="https://ifiuza-leadstrackerapp.netlify.app/" target="_blank">
-              <b> DEC 2024: A Leads Tracker App. (JavaScript + firebase)</Script></b> </a>
-          <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
+              <b> DEC 2024:   A Leads Tracker App. (JavaScript + firebase)</Script></b> </a>
+          <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
                 <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
                 <b> Machine Learning in R</b></a>
