--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,7 @@
                           <b> A Leads Tracker App. (JavaScript + firebase)</Script></b> </a>
                       <a href="https://github.com/ifiuza/leadstrackerapp"> - See Code on GitHub</a>
 
-                      <a href="https://bespoke-griffin-fd3aa4.netlify.app/" target="_blank">
+                      <br><a href="https://bespoke-griffin-fd3aa4.netlify.app/" target="_blank">
                           <b> A BlackJack Game. (JavaScript)</Script></b> </a>
                       <a href="https://github.com/ifiuza/Blackjack"> - See Code on GitHub</a>
 
