adding new poject / Cookie Consent

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
           <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store Owner </b>
         
             <p><b>Latest Projects:</b></p>
-          <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
+            <br><a href="https://cookieconsent-ifiuza.netlify.app/">
+              <b> The World Most Annoying Cookie Consent - Done with JavaScript / CSS. </b></a> 
+            <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
                 <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
                 <b> Machine Learning in R</b></a>
